fix: flight card contrast, items, and style

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -6,7 +6,7 @@
     src: url('~assets/fonts/raleway-v18-latin.woff') format('woff')
 
 .heading
-    margin-top: 2.5rem
+    margin-top: 2rem
     color: $primary
 
 .wrapper
